chap12/istiospec/basic/ingress.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cncamp-istio-virtualservice
spec:
  gateways:
    - cncamp-istio-gateway
  hosts:
    - cncamp.com
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: cncamp.default.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cncamp-istio-gateway
spec:
  selector:
    istio: ingress
  servers:
    - hosts:
        - cncamp.com
      port:
        name: cncamp-istio-virtualservice
        number: 80
        protocol: HTTP
